--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ nav {
     align-items: center;
     height: 17vh;
   }
-  
   .nav-links {
     gap: 2rem;
     list-style: none;
@@ -50,7 +49,7 @@ nav {
     text-decoration: none;
     text-decoration-color: white;
   }
-
+  
   a:hover {
     color: grey;
     text-decoration: underline;
@@ -60,6 +59,21 @@ nav {
   
   .logo {
     font-size: 2rem;
+  }
+  
+  .logo:hover {
+    cursor: default;
+  }
+  
+  /* HAMBURGER MENU */
+  
+  #hamburger-nav {
+    display: none;
+  }
+  
+  .hamburger-menu {
+    position: relative;
+    display: inline-block;
   }
 
   .logo:hover {
@@ -93,3 +107,56 @@ nav {
     transition: all 0.3 ease-in-out;
   }
   
+  .menu-links {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+  }
+  
+  .menu-links a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+  }
+  
+
+  .menu-links li {
+    list-style: none;
+  }
+  
+  .menu-links.open {
+    max-height: 300px;
+  }
+  
+  .hamburger-icon.open span:first-child {
+    transform: rotate(45deg) translate(10px, 5px);
+  }
+  
+  .hamburger-icon.open span:nth-child(2) {
+    opacity: 0;
+  }
+  
+  .hamburger-icon.open span:last-child {
+    transform: rotate(-45deg) translate(10px, -5px);
+  }
+  
+  .hamburger-icon span:first-child {
+    transform: none;
+  }
+  
+  .hamburger-icon span:first-child {
+    opacity: 1;
+  }
+  
+  .hamburger-icon span:first-child {
+    transform: none;
+  }
