--- a/style.css
+++ b/style.css
@@ -334,6 +334,14 @@ section {
     height: 400px;
     width: 400px;
     margin: auto 0;
+    display: flex;
+}
+
+.section__pic-container img {
+    height: 100%;       
+    width: 100%;        
+    border-radius: 50%; /* Make the image round */
+    object-fit: cover;  
 }
   
 /* EXPERIENCE/SKILLS SECTION */
