--- a/style.css
+++ b/style.css
@@ -27,16 +27,40 @@ a,
 
 /* DESKTOP NAV */
 
+.sticky-header {
+    position: fixed; 
+    top: 2%;                
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px);
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    width: 70%;     
+    background-color: rgba(255, 255, 255, 0.3); 
+    z-index: 10;     
+    height: 6%;
+    box-shadow: 0 2px 6px 0 rgba(0,0,0,.12);
+    border-radius: 2rem;
+}
+
+.content {
+    /* Add margin-top to the main content to prevent it from being hidden behind the header */
+    margin-top: 60px; /* This value should be equal to or greater than the header's height */
+}
+
 nav,
 .nav-links {
+    
   display: flex;
 }
 
 
 nav {
+    
     justify-content: space-around;
     align-items: center;
     height: 17vh;
+    
 }
   
 .nav-links {
@@ -66,8 +90,10 @@ a:hover {
     cursor: default;
 }
   
+
+
 /* HAMBURGER MENU */
-  
+
 #hamburger-nav {
     display: none;
 }
@@ -79,19 +105,8 @@ a:hover {
 
 .logo:hover {
     cursor: default;
-}
+}  
 
-/* HAMBURGER MENU */
-
-#hamburger-nav {
-    display: none;
-}
-  
-.hamburger-menu {
-    position: relative;
-    display: inline-block;
-}
-  
 .hamburger-icon {
     display: flex;
     flex-direction: column;
