--- a/style.css
+++ b/style.css
@@ -38,13 +38,12 @@ a,
     width: 70%;     
     background-color: rgba(255, 255, 255, 0.3); 
     z-index: 10;     
-    height: 6%;
+    height: 60px;
     box-shadow: 0 2px 6px 0 rgba(0,0,0,.12);
     border-radius: 2rem;
 }
 
 .content {
-    /* Add margin-top to the main content to prevent it from being hidden behind the header */
     margin-top: 60px; /* This value should be equal to or greater than the header's height */
 }
 
